--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,14 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.security.enabled=false
-security.ignored=/**
+logging.level.root=DEBUG
 
 
+spring.security.user.password=secret
+
+questapp.app.secret=questApp
+#millisecond cinsinden 2 dakika. Bunu 1 saat olarak hesaplayip degistirebilirsiniz.
+questapp.expires.in=120000
+#saniye cinsinden 7 gun
+refresh.token.expires.in=604800
 
